--- a/Tamagotchi/App.xaml
+++ b/Tamagotchi/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Tamagotchi.App"
+﻿<Application x:Class="TamagotchiApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Tamagotchi"
+             xmlns:local="clr-namespace:TamagotchiApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
