--- a/TamagotchiWeb/Views/Home/Index.cshtml
+++ b/TamagotchiWeb/Views/Home/Index.cshtml
@@ -5,15 +5,26 @@
 }
 
 <div class="jumbotron">
-
-   <h3>New Tamagotchi</h3>
-    @using (Html.BeginForm("Add", "Home", FormMethod.Post))
+@{
+    if (ViewBag.result == "success")
     {
-        @Html.TextBoxFor(model => model.Name)
-
-
-        <button type="submit">Add</button>
+    <div class="alert alert-success">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <strong>Success!</strong> You've adopted a new tamagotchi!
+    </div>
+    } else if(ViewBag.result == "error")
+    {
+    <div class="alert alert-danger">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <strong>Error!</strong> You've already had a tamagotchi with that name!
+    </div>
     }
+    }
+
+    <form action="/Home/Add" method="post">
+        <button type="submit" class="btn btn-success pull-right">Create tamagotchi</button>
+        <input id="tbName" name="tbName" type="text" class="form-control pull-right" placeholder="name" />
+    </form>
 
     <h2>My Tamagothi's</h2>
     <ul>
